# Courtroom-Video-Analyzer-Agent

./: .env.example  .gitignore  API_SETUP.md  API_VERSIONING.md  DEMO_SETUP.md  DEMO_VIDEO_GUIDE.md  FINAL_STATUS.md  HACKATHON_SUBMISSION_GUIDE.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  REPOSITORY_FINALIZATION_CHECKLIST.md  RRF_TUNING_ANALYSIS.md  RTSP_SETUP.md  SECURITY_SCAN_REPORT.md  SETUP_COMPLETE.md  STRESS_TEST_RESULTS.md  TASK_14.1_PEGASUS_OPTIMIZATION.md  TECHNICAL_BLOG_POST.md  TWELVE_LABS_INTEGRATION.md  agent.py  api_server.py  constants.py  demo.py  index.py  ingestion.py  mcp_server.py  processor.py  prompt.md  pyproject.toml  requirements.txt  rrf_tuning_results.json  start_demo.sh  tasksplit.md  test_agent.py  test_api.py  test_audio_processing.py  test_echo_agent.py  (+12 more)
.kiro/specs/courtroom-video-analyzer/: .config.kiro  design.md  requirements.md  tasks.md
backend/: __init__.py
backend/agent/: __init__.py  agent.py
backend/api/: __init__.py  models.py  server.py
backend/core/: __init__.py  constants.py  logging_config.py  timestamp_sync.py
backend/indexing/: __init__.py  indexer.py  ingestion.py
backend/processing/: __init__.py  processor.py
backend/tools/: __init__.py  mcp_server.py
frontend/: TASK_12.2_UI_FIXES.md  TASK_9.2_VALIDATION.md  UI_POLISH_CHECKLIST.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-query-results.html
frontend/src/: App.css  App.tsx
frontend/src/components/: ChatPanel.css  ChatPanel.tsx  LatencyBadge.css  (+5 more)
scripts/: check_demo_ready.sh  start_api_server.sh  start_rtsp_stream.sh  stream_demo_video.sh  test_rtsp_stream.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_mcp_tools.py
tests/stress/: __init__.py
tests/unit/: __init__.py  test_audio_processing.py  test_frame_processing.py  test_timestamp_alignment.py  test_transcript_query.py  test_video_query.py
